--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,95 +1,86 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundmenu"
     tools:context="controlf13.enozes.MainActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="UselessParent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/backgroundmenu"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints,RtlHardcoded,UselessLeaf">
 
         <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="#21100B"
-            android:elevation="1dp"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/iconevoltar"
-            tools:ignore="ContentDescription,RtlHardcoded" />
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:id="@+id/btnConfig"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/imageButton"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="10dp"
+            android:layout_alignTop="@+id/btnVoltar"
+            android:layout_marginLeft="10dp"
             android:background="#21100B"
             android:elevation="1dp"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/iconeconfig"
+            tools:ignore="ContentDescription" />
+
+        <ImageButton
+            android:id="@+id/btnVoltar"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="#21100B"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/iconevoltar"
             tools:ignore="ContentDescription,RtlHardcoded" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/logoENozes"
             android:layout_width="400dp"
             android:layout_height="250dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:elevation="1dp"
             app:srcCompat="@drawable/logojogo"
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/msgIniciar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:elevation="1dp"
-            android:fontFamily="sans-serif"
-            android:text="Toque para iniciar"
-            android:textColor="#FFFFFF"
+            android:text="Toque para Iniciar"
             android:textSize="30sp"
-            android:typeface="normal"
             tools:ignore="HardcodedText" />
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="80dp"
-            android:layout_height="42dp"
-            android:layout_alignBottom="@+id/textView"
-            android:layout_alignEnd="@+id/imageButton2"
+            android:id="@+id/logoControlF13"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@+id/logoENozes"
+            android:layout_marginBottom="50dp"
+            android:layout_marginEnd="9dp"
+            android:layout_toStartOf="@+id/controlF13Text"
             app:srcCompat="@drawable/logotime"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            tools:layout_editor_absoluteX="665dp"
+            tools:layout_editor_absoluteY="402dp" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/controlF13Text"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/imageView2"
-            android:layout_alignEnd="@+id/imageView2"
-            android:layout_alignStart="@+id/imageView2"
+            android:layout_marginBottom="13dp"
             android:text="Desenvolvido por"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
             android:textSize="12sp"
-            tools:ignore="HardcodedText,SmallSp" />
-
+            tools:ignore="HardcodedText"
+            android:layout_above="@+id/logoControlF13"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
