--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     tools:context="controlf13.enozes.MainActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/backgroundmenu"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints,RtlHardcoded,UselessLeaf">
+        android:padding="10dp"
+        tools:ignore="MissingConstraints,RtlHardcoded,UselessLeaf"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageButton
             android:id="@+id/btnConfig"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/btnVoltar"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
             android:background="#21100B"
             android:elevation="1dp"
@@ -31,8 +32,8 @@
             android:id="@+id/btnVoltar"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="#21100B"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/iconevoltar"
@@ -42,45 +43,51 @@
             android:id="@+id/logoENozes"
             android:layout_width="400dp"
             android:layout_height="250dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             app:srcCompat="@drawable/logojogo"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/msgIniciar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Toque para Iniciar"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            tools:ignore="HardcodedText"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="669dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="Toque para Iniciar"
-            android:textSize="30sp"
-            tools:ignore="HardcodedText" />
+            android:layout_marginBottom="11dp" />
 
         <ImageView
             android:id="@+id/logoControlF13"
             android:layout_width="90dp"
             android:layout_height="50dp"
-            android:layout_alignBottom="@+id/logoENozes"
-            android:layout_marginBottom="50dp"
-            android:layout_marginEnd="9dp"
-            android:layout_toStartOf="@+id/controlF13Text"
             app:srcCompat="@drawable/logotime"
             tools:ignore="ContentDescription"
             tools:layout_editor_absoluteX="665dp"
-            tools:layout_editor_absoluteY="402dp" />
+            tools:layout_editor_absoluteY="402dp"
+            android:layout_above="@+id/msgIniciar"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="17dp"
+            android:layout_marginBottom="11dp" />
 
         <TextView
-            android:id="@+id/controlF13Text"
+            android:id="@+id/controlF13text"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="13dp"
+            android:layout_above="@+id/logoControlF13"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="8dp"
             android:text="Desenvolvido por"
             android:textAlignment="center"
+            android:textColor="#FFFFFF"
             android:textSize="12sp"
-            tools:ignore="HardcodedText"
-            android:layout_above="@+id/logoControlF13"
-            android:layout_alignParentEnd="true" />
+            tools:ignore="HardcodedText" />
+
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
