--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,11 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
             android:background="#21100B"
+            android:contextClickable="true"
             android:elevation="1dp"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/iconeconfig"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription,UnusedAttribute" />
 
         <ImageButton
             android:id="@+id/btnVoltar"
@@ -35,9 +36,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="#21100B"
+            android:contextClickable="true"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/iconevoltar"
-            tools:ignore="ContentDescription,RtlHardcoded" />
+            tools:ignore="ContentDescription,RtlHardcoded,UnusedAttribute" />
 
         <ImageView
             android:id="@+id/logoENozes"
