--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -139,7 +139,7 @@
                     android:padding="5dp">
 
                     <ImageButton
-                        android:id="@+id/imageButton2"
+                        android:id="@+id/notMusic"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:background="#21100B"
@@ -147,7 +147,7 @@
                         app:srcCompat="@drawable/xiconeinativo" />
 
                     <ImageButton
-                        android:id="@+id/imageButton"
+                        android:id="@+id/music"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:background="#FFFFFF"
